--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,40 @@
 /*  your css code here. If applicable */
+body{
+	margin: 0px;
+	padding: 0px;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main{
+    width: 300px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    background-color:#f1f1f1;
+    padding:25px;
+    font-size: 18px;
+    border-radius: 15px;
+    box-shadow: 0px 4px 10px 1px grey;
+}
+
+.main>*{
+    margin-bottom: 0px;
+    margin-top: 5px;
+}
+.main>img{
+    border-radius: 10px;
+}
+
+.btn{
+    padding: 10px;
+    font-size: 22px;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    background-color: #fe625aff;
+}
